# team-project

./: .gitignore  README.md  project.code-workspace  pyproject.toml
.github/workflows/: autofix-lint.yml  autofix-typos.yml  ci.yml  publish.yml
data/factors/: pfas_tq_benchmarks_epa_aligned.csv
data/usgs/seawolf/: NationalPFASReconLandscapeMetadata.xml  PFAS_DataSummaries_5k_50k_SummaryData.csv
data/usgs/smalling/: PFAS_ENV.csv
docs/kick-off/ideas/: index.html
docs/notebooks/: checkpoint_1.html  checkpoint_1.py  data_dictionary.html
notebooks/: checkpoint_1.py  data_dictionary.py  print.css
notebooks/data/usgs/mcmahon/: PFAS_Data_Dictionary.csv
scripts/: export_notebooks.py  run_notebook.sh
tests/: test_notebooks.py
