[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "marimo>=0.23.14",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "matplotlib>=3.9",
]

[dependency-groups]
dev = [
    "codespell>=2.4.1",
    "pytest>=8.3.5",
]

[tool.codespell]
skip = ".git,*.lock,.venv"
ignore-words-list = "nd,egsy,IST,Sampe"
